# IE_Event_Bot_alt

./: .gitattributes  .gitignore  .release-please-config.json  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  pr-target-guard.yml  release-please.yml  sync-main-to-develop.yml
docs/: fork-upstream-workflow.md
services/bot/: bot.py  config.py  notify.py  sync_discord.py  sync_google.py  sync_notion.py
services/webhook/: webhook.py
tools/: callgraph_merge.py  normalize-utf8-no-bom.ps1
workers/: README.md  README_KV.md  requirements.txt  wrangler.jsonc
workers/src/: discord_notion_sync.py  entry.py  google_apply_sync.py  google_auth.py  google_calendar_sync.py  google_watch.py  health_checks.py  jobs.py  state.py  sync_lock_do.py
