[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ie-event-bot"
version = "0.1.0"
description = "Discord, Google Calendar, and Notion integration bot"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]

[tool.ruff.lint.per-file-ignores]
"workers/src/entry.py" = ["F401"]
